[tool.poetry]
name = "bayes-infer-py"
version = "0.1.0"
description = ""
authors = ["lucasb <lucas.boutar@gmail.com>"]
readme = "README.md"
packages = [{include = "bayes_infer_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
